hphp/hack/test/typecheck/const_attribute/usage/class.php
<?hh

<<__Const>>
class Concrete {}

<<__Const>>
abstract class AbstractC {}

<<__Const>>
final class FinalC {}

<<__Const>>
abstract final class AbstractFinal {}
